--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Tarea 1</string>
+    <string name="welcome">Bienvenido</string>
+    <string name="login">Entrar</string>
 </resources>
